2001-12-30 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added more Orders to the _order callback
	* made AImissionScript a subclass of FlyByWire
	* added FlyByWire-Callbacks to the _order callbacks
	* added more callbacks to _unit
	

2001-12-29 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* 'fixed' aggressive.cpp
	   it now uses it's own suborders, instead of the units orders
	
	
2001-12-28 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* the first ai works now with new scripting
	* improved vdu/messages

	
2001-12-27 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - added script_call_order.cpp

2001-12-26 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - added sort-of classes/instances of modules
	* AI scripting:
	  - first test ai is running (doing nothing)
	  - added modules/ai_test.c , mission/testd/testd_aitest1.mission

	
2001-12-24 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - fixed memory leaks for varInsts
	* AI scripting:
	  - added src/cmd/ai/missionscript.{cpp,h}
	  - modified src/cmd/ai/Makefile.am
	* new AI scripting is used if ainame begins with _ (not working yet)
	

2001-12-22 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - I'm starting to free memory/varInsts
	

2001-12-22 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified Cockpit:
	  - Elite-Style radar
	  - config var graphics/hud/radarType, can be WC or Elite
	  - several 'lines' that get drawn, several config vars
	

2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified Cockpit:
	  - to draw a box around all units
	    config var drawAllTargetBoxes controls that behaviour
	  - to always draw the ITTS (var drawAlwaysITTS)
	  - to use more colors on the radar/the target boxes
	

2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified configure.in
	  - added python1.5 to search for python libs