@@ -66,7 +66,7 @@ void Mission::DirectorStart(missionNode *node){
   cout << "DIRECTOR START" << endl;
 
   debuglevel=atoi(vs_config->getVariable("interpreter","debuglevel","0").c_str());
-  bool start_game=XMLSupport::parse_bool(vs_config->getVariable("interpreter","startgame","true"));
+start_game=XMLSupport::parse_bool(vs_config->getVariable("interpreter","startgame","true"));
 
   vi_counter=0;
   old_vi_counter=0;
@@ -106,7 +106,9 @@ void Mission::DirectorStart(missionNode *node){
       doModule(mnode,SCRIPT_PARSE);
     }
   }
+}
 
+void Mission::DirectorInitgame(){
   if(director==NULL){
     return;
   }
